fix(navbar-vertical-item): align badge in collapse state correctly
The badge in the collapsed state is right aligned.

If the badge value is over 99 it will be shown as "+99".
To ensure consistency, the badge in the expanded state will also show "+99" for values over 99.

--- a/projects/element-ng/navbar-vertical/si-navbar-vertical-item.component.scss
+++ b/projects/element-ng/navbar-vertical/si-navbar-vertical-item.component.scss
@@ -121,6 +121,7 @@
 }
 
 .badge-text {
-  inset-block-start: - map.get(variables.$spacers, 4);
-  inset-inline-start: - map.get(variables.$spacers, 3);
+  position: absolute;
+  inset-block-start: map.get(variables.$spacers, 2);
+  inset-inline-end: map.get(variables.$spacers, 3);
 }
